@@ -2,6 +2,7 @@
 - Order stub execution results in UI alphabetically (https://github.com/dukeofharen/httplaceholder/pull/250/files).
 - Sort and group configuration items in help page in terminal (https://github.com/dukeofharen/httplaceholder/pull/250/files).
 - Added option to response body helper to format JSON and XML strings (https://github.com/dukeofharen/httplaceholder/pull/250/files).
+- Updated YAML input formatting so a neat error message is returned if the YAML is invalid (https://github.com/dukeofharen/httplaceholder/pull/250/files).
 
 # BREAKING CHANGES
 -
